preserved/historical-layout/crates/jackin-capsule/src/tui/components/dialog/snapshots/jackin_capsule__tui__components__dialog__tests__usage_dialog_amp_wide_100x32.snap
---
source: crates/jackin-capsule/src/tui/components/dialog/tests.rs
assertion_line: 2063
expression: "render_usage_dialog_snapshot_for_view(100, 32, UsageDialogTab::Provider,\namp_usage_view_fixture())"
---



       ┌ Usage ─────────────────────────────────────────────────────────────────────────────┐
       │         Overview   OpenAI   Anthropic   Amp   xAI   Z.AI   Kimi   MiniMax          │
       │                                        ─────                                       │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  Amp                                                        account@personal.test  │
       │  Updated now                                                                       │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  Plan Amp Free                                                                     │
       │                                                                                    │
       │  Amp Free                                                                          │
       │  ██░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  │
       │  4% left                                                        Resets in 22h 40m  │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  Credits                                                                           │
       │  Individual credits: $4.76                                                         │
       │                                                                                    │
       └────────────────────────────────────────────────────────────────────────────────────┘
