preserved/historical-layout/crates/jackin-capsule/src/tui/components/dialog/snapshots/jackin_capsule__tui__components__dialog__tests__usage_dialog_minimax_provider_100x32.snap
---
source: crates/jackin-capsule/src/tui/components/dialog/tests.rs
assertion_line: 2115
expression: "render_usage_dialog_snapshot_for_view(100, 32, UsageDialogTab::Provider,\nminimax_usage_view_fixture())"
---



       ┌ Usage ─────────────────────────────────────────────────────────────────────────────┐
       │         Overview   OpenAI   Anthropic   Amp   xAI   Z.AI   Kimi   MiniMax          │
       │                                                                  ─────────         │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  MiniMax                                                        account@work.test  │
       │  Updated 3m ago                                                                    │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  General · 5h                                                                      │
       │  ████████████████████████████████████████████████████████████████████████████████  │
       │  100% left                                                             Resets 28m  │
       │  Usage: 0 / 100                                                                    │
       │                                                                                    │
       │  General · Weekly                                                                  │
       │  █████████████████████████████████████████████████████████████████████████████░░░  │
       │  99% left                                                               Resets 4d  │
       │  Usage: 1 / 100                                                                    │
       │                                                                                    │
       │  Video                                                                             │
       │  ████████████████████████████████████████████████████████████████████████████████  │
       │  100% left                                                             Resets 14h  │
       │  Usage: 0 / 100                                                                    │
       │                                                                                    │
       └────────────────────────────────────────────────────────────────────────────────────┘
