preserved/historical-layout/crates/jackin-capsule/src/tui/components/dialog/snapshots/jackin_capsule__tui__components__dialog__tests__usage_dialog_narrow_60x18.snap
---
source: crates/jackin-capsule/src/tui/components/dialog/tests.rs
assertion_line: 2013
expression: "render_usage_dialog_snapshot(60, 18, UsageDialogTab::Provider)"
---



  ┌ Usage: OpenAI ───────────────────────────────────────┐
  │ Overview   OpenAI   Anthropic   Amp   xAI   Z.AI   › │
  │           ────────                                   │
  │                                                      │
  │  OpenAI                          alexey@example.com  │
  │  Updated now                                         │
  │──────────────────────────────────────────────────────│
  │  Plan Pro 20x                                        │
  │  Session  37% left · Resets 15:07                    │
  │  Credits  unsupported                                │
  └──────────────────────────────────────────────────────┘
